// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/template-literal/1tbs > nested template literal 1`] = `
"<script setup lang="ts">
const x = \`foo: \${
  1 +
  (function () {
    return 2;
  })() +
  3
}\`;
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        const x = \`foo: \${
          1 +
          (function () {
            return 2;
          })() +
          3
        }\`;
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/template-literal/1tbs > template literal 1`] = `
"<script setup lang="ts">
const x = \`
if (condition1) {
  foo
} else if (condition2) {
  bar
}
else
{
  baz
}
\`;
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        const x = \`
if (condition1) {
  foo
} else if (condition2) {
  bar
}
else
{
  baz
}
\`;
      }
    "
  >
    Click Me
  </button>
</template>
"
`;
